updated issue of visible coin in top row when player is computer and mouseenter event happens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,8 @@ h1, h3 {
 
 .square-cell-entry {
     flex: 1 1;
-    background-color: white;
+    background-color: whitesmoke;
+    border-top: 1px solid gray;
 }
 
 .square-cell-entry-disable {
@@ -150,7 +151,7 @@ h1, h3 {
     width: 90%;
     height: 90%;
     border-radius: 50%;
-    background-color: white;
+    background-color: whitesmoke;
     margin: 5% auto;
 }
 
@@ -158,7 +159,7 @@ h1, h3 {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background-color: white;
+    background-color: whitesmoke;
     margin: 0;
 }
 
